--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-env
-build
-dist
-__pycache__
-*.spec
-RCA_Peer_Support_Data
-report.*
-group_tracker2.py
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
