--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron": "^16.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "wait-on": "^6.0.0",
