--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^16.0.6",
+    "framer-motion": "^5.5.7",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
