--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/uuid": "^8.3.4",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^16.0.6",
@@ -31,6 +33,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "react-transition-group": "^4.4.2",
+    "uuid": "^8.3.2",
     "wait-on": "^6.0.0"
   },
   "devDependencies": {
