--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^16.0.6",
+    "electron-store": "^8.0.1",
     "framer-motion": "^5.5.7",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
