--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
-    "@types/pdfkit": "^0.12.3",
+    "@react-pdf/renderer": "^2.1.0",
     "@types/react-transition-group": "^4.4.4",
     "@types/uuid": "^8.3.4",
     "concurrently": "^7.0.0",
@@ -32,7 +32,6 @@
     "electron-store": "^8.0.1",
     "framer-motion": "^5.5.7",
     "path-browserify": "^1.0.1",
-    "pdfkit": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
