--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --port 3000",
-    "build": "NODE_ENV=production && webpack",
+    "build": "SET NODE_ENV=production && webpack",
     "electron-dev": "concurrently -k \"cross-env BROWSER=none npm run start\" \" npm run electron-start\"",
-    "electron-build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
+    "electron-build": "npm run build && electron-builder -c.extraMetadata.main=dist/main.js",
     "electron-start": "wait-on tcp:3000 && electron ."
   },
   "build": {
@@ -42,6 +42,7 @@
     "@types/uuid": "^8.3.4",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
     "electron-store": "^8.0.1",
     "framer-motion": "^5.5.7",
     "path-browserify": "^1.0.1",
@@ -54,11 +55,11 @@
     "wait-on": "^6.0.0"
   },
   "devDependencies": {
-    "electron": "^16.0.6",
     "@electron-forge/cli": "^6.0.0-beta.63",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "css-loader": "^6.5.1",
+    "electron": "^16.0.6",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.6",
     "ts-loader": "^9.2.6",
