--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "homepage": "./",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --port 3000",
-    "build": "SET NODE_ENV=production && webpack",
+    "start": "electron-forge start",
+    "build": "NODE_ENV=production && webpack",
+    "build:win32": "SET NODE_ENV=production && webpack",
     "electron-dev": "concurrently -k \"cross-env BROWSER=none npm run start\" \" npm run electron-start\"",
-    "electron-build": "npm run build && electron-builder -c.extraMetadata.main=dist/main.js",
-    "electron-start": "wait-on tcp:3000 && electron ."
+    "electron-build": "npm run build && npm run make",
+    "electron-start": "wait-on tcp:3000 && electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "build": {
     "extends": null,
@@ -43,6 +46,7 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "framer-motion": "^5.5.7",
     "path-browserify": "^1.0.1",
@@ -56,6 +60,10 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
+    "@electron-forge/maker-deb": "^6.0.0-beta.63",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
+    "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "css-loader": "^6.5.1",
@@ -67,5 +75,32 @@
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "rca_group_tracker"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
