--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "homepage": "./",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "react-start": "webpack serve --port 3000",
     "start": "electron-forge start",
     "build": "NODE_ENV=production && webpack",
     "build:win32": "SET NODE_ENV=production && webpack",
-    "electron-dev": "concurrently -k \"cross-env BROWSER=none npm run start\" \" npm run electron-start\"",
+    "electron-dev": "concurrently -k \"cross-env BROWSER=none npm run react-start\" \" npm run electron-start\"",
     "electron-build": "npm run build && npm run make",
     "electron-start": "wait-on tcp:3000 && electron .",
     "package": "electron-forge package",
@@ -48,7 +49,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
-    "framer-motion": "^5.5.7",
+    "framer-motion": "^5.6.0",
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.13.0",
     "react": "^17.0.2",
